--- a/_pages/non-academic.html
+++ b/_pages/non-academic.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
-permalink: /year-archive/
-title: "Blog posts"
+permalink: /non-academic/
+title: "Book Reviews & Non-Academic Articles"
 author_profile: true
 redirect_from:
   - /wordpress/blog-posts/
